<resources>
    <string name="app_name">WyndTerminalPocket</string>
    <string name="title_activity_login">Connexion</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Nom d\'utilisateur</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Connexion</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_email_not_exist">This login is not exist</string>
    <string name="error_invalid_login">This login is invalid</string>
    <string name="error_invalid_user_pwd">No user found</string>
    <string name="error_invalid_password">Merci de rentrer un mot de passe</string>
    <string name="error_incorrect_password">Please enter a password</string>
    <string name="error_connexion">Erreur de connexion. Veuillez ressayer !</string>
    <string name="error_field_required">Champ requis</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_menu"> </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="description">DASHBOARD</string>
    <string name="btn_connexion">Se connecter</string>
    <string name="wyndt_name">Wynd Terminal Monitoring</string>
    <string name="desc_logo">wynd</string>
    <string name="mdp">Mot de passe oublié</string>
    <string name="ask_count">Demander un compte</string>
    <string name="desc_cat">Lorem ipsum</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_users">Utilisateurs</string>
    <string name="title_activity_restaurant_fragment">RestaurantFragment</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_add_user">Ajouter</string>
    <string name="rest_prompt">Choose a restaurant</string>
    <string name="parent_prompt">Choose a franchise</string>
    <string name="exki_logo">exki_logo</string>
    <string name="title_activity_profil">Profil</string>
    <string name="title_activity_edit_user_profil">Modifier</string>
    <string name="title_activity_edit_my_profil">Modifier mon profil</string>
    <string name="title_activity_mon_restaurant">Mon Restaurant</string>
    <string name="title_activity_ask_account">Demander un compte</string>
    <string name="title_activity_terminals">Terminaux</string>
    <string name="title_activity_info_of_restaurant">Informations</string>
    <string name="title_activity_edit_restaurant">Modifier</string>
    <string name="title_activity_add_terminal">Ajouter terminal</string>
    <string name="title_activity_utilisateurs">Utilisateurs</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_terminal_position">Localisation</string>
    <string name="title_activity_add_entity">Ajouter une entité</string>
    <string name="title_activity_mdp_oublie">Mot de passe oublié</string>
    <string name="title_activity_historique">Historique status</string>
    <string name="title_activity_info_of_terminal">Détails</string>
    <string name="title_activity_edit_terminal">Modifier</string>
    <string name="title_activity_add_parent">Ajouter</string>
    <string name="title_activity_edit_parent">Modifier</string>
    <string name="title_activity_orders">Commandes</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_info_order">Informations commande</string>

    <string name="email_template">Bonjour administrateur,
        \n\nL\'utilisateur suivant %1$s du restaurant %2$s a perdu son mot de passe et souhaiterait recevoir un nouveau.
        \n\n---------------\n\nCeci est un mail automatique, Merci de ne pas y répondre.
    </string>
     <string name="new_account">Bonjour administrateur,
        \n\nUn nouveau utilisateur souhaite la création d\'un compte sur l\'app. Voici ses informations:
         \n\n Username: %1$s,Email: %2$s, Phone: %3$s, Restaurant: %4$s
        \n\n---------------\n\nCeci est un mail automatique, Merci de ne pas y répondre.
    </string>
     <string name="user_created">Bonjour %1$s,
        \n\nVotre compte a bien été créé.
         \n\nPour accéder à l\'application, veuillez utiliser votre email : %2$s et votre mot de passe: %3$s
        \n\n---------------\n\nCeci est un mail automatique, Merci de ne pas y répondre.
    </string>
    <string name="user_deleted">Bonjour %1$s,
        \n\nVotre compte a été supprimé. Vous pouvez demander un nouveau compte sur l\'app.
        \n\n---------------\n\nCeci est un mail automatique, Merci de ne pas y répondre.
    </string>
     <string name="edit_user">Bonjour %1$s,
        \n\nVotre compte a été modifié.
         \n\nPour accéder à l\'application, veuillez utiliser toujours votre email : %2$s et votre mot de passe: %3$s
        \n\n---------------\n\nCeci est un mail automatique, Merci de ne pas y répondre.
    </string>
     <string name="device_off">Bonjour %1$s,
        \n\nLe terminal %2$s de votre restaurant %3$s est OFF.
         \n\nSi vous avez un problème, veuillez nous appeler au 01.76.44.03.53 ou nous envoyer un email à support@wynd.eu.
        \n\n---------------\n\nCeci est un mail automatique, Merci de ne pas y répondre.
    </string>
    <string name="chartdesc">Afin d\'afficher un graphique représentant \n\nle status d\'un terminal pendant une certaine période,\n\n sélectionner 2 dates, ainsi que le terminal</string>
    <string name="terminaldesc">Afficher les informations de\n\n tous terminaux ou filtrer par restaurant</string>
    <string name="usersdesc">Afficher et modifier les\n\n utilisateurs du monitoring</string>
    <string name="restdesc">Afficher et modifier les restaurants, commandes et terminaux</string>
    <string name="ordersdesc">Afficher les commandes reçues\n\n par un restaurant et leur états</string>
    <string name="title_activity_slide_show">SlideShow</string>
    <string name="section_format">%1$s</string>
    <string name="orders">%1$s Commandes</string>
    <string name="terminals">%1$s Terminaux</string>
    <string name="users">%1$s Utilisateurs</string>
    <string name="fragment_three">Gérer vos pointes de ventes, ainsi que vos équipiers</string>
    <string name="fragment_two">Avoir un aperçu du nombre des commandes reçues par un point de vente</string>
    <string name="fragment_one">Suivre les états des Wynd Terminaux</string>

</resources>
