<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wynd.app.wyndterminalpocket.MainActivity"
    android:orientation="horizontal"
    >

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/picto_wynd"
        android:contentDescription="@string/desc_logo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:text="@string/wyndt_name"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_below="@id/layout1"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal">
    <Button android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/btn"
        android:background="@drawable/shape_button"
        android:textColor="@android:color/white"
        android:padding="20dp"
        android:text="@string/btn_connexion" />

    </LinearLayout>


</RelativeLayout>
