<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wynd.app.wyndterminalpocket.Utilisateurs">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/desc"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:padding="10dp"
                android:text="@string/usersdesc"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lback"
            android:layout_below="@id/desc"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Retour accueil"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/header"
            android:layout_below="@id/lback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/slideshow"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/body"
            android:layout_below="@id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/gray"
                android:layout_height="wrap_content">
                <Spinner
                    android:id="@+id/parent"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/parent_prompt" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:background="@color/gray"
                android:layout_height="wrap_content">
                <Spinner
                    android:id="@+id/rest_channel_id"
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:padding="10dp"
                    android:layout_height="wrap_content"
                    android:prompt="@string/rest_prompt" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/empty"
            android:layout_gravity="center_horizontal"
            android:text="Aucun restaurant"/>
        <LinearLayout
            android:id="@+id/footer"
            android:layout_below="@id/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/cardList"
            android:layout_below="@id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        </LinearLayout>

    </RelativeLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_action_add" />

</FrameLayout>
