<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp"
    card_view:cardBackgroundColor="@android:color/white"
    android:clickable="true"
    android:background="?android:selectableItemBackground"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_margin="5dp">

    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <ImageView
                android:id="@+id/picture"
                android:layout_weight="0.2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/exki_logo"
                />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_gravity="end"
                android:layout_weight="0.70">
                <LinearLayout
                    android:id="@+id/lName"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Name"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"/>
                    <TextView
                        android:id="@+id/txtType"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(INACTIVE)"
                        android:layout_marginLeft="5dp"
                        android:textStyle="italic"
                        android:textColor="@color/red"
                        android:textSize="16sp"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/lEmail"
                    android:layout_below="@id/lName"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_mail_black"/>
                    <TextView
                        android:id="@+id/txtEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:autoLink="email"
                        android:text="Email" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/lChannel"
                    android:layout_below="@id/lEmail"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_settings_ethernet_black"/>
                    <TextView
                        android:id="@+id/txtChannel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Channel"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/lAdd"
                    android:layout_below="@id/lChannel"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_info_black"/>
                    <TextView
                        android:id="@+id/txtAdd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Address"
                        android:autoLink="phone"
                        android:gravity="center_vertical"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lPhone"
                    android:layout_below="@id/lAdd"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_phone_black"/>
                    <TextView
                        android:id="@+id/txtPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Phone"
                        android:autoLink="phone"
                        android:gravity="center_vertical"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>


            </RelativeLayout>
            <ImageView
                android:layout_weight="0.1"
                android:id="@+id/info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@drawable/ic_info_black"
                android:contentDescription="@string/exki_logo"
                />


        </LinearLayout>

        <LinearLayout
        android:id="@+id/expandable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/header"
        android:layout_gravity="bottom"
        >


        <Button android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/buttons_chape"
            android:textColor="@drawable/text_color"
            android:id="@+id/btnUsers"
            android:visibility="gone"
            android:layout_weight="1"
            android:text="@string/users"/>
        <Button android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/buttons_chape"
            android:textColor="@drawable/text_color"
            android:id="@+id/orders"
            android:visibility="gone"
            android:layout_weight="1"
            android:text="@string/orders"/>
        <Button android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttons_chape"
            android:textColor="@drawable/text_color"
            android:id="@+id/btnTerminals"
            android:text="@string/terminals"/>

    </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>